fixed button overflow

--- a/styles.css
+++ b/styles.css
@@ -144,7 +144,7 @@ hr {
   width: 170px;
   font-size: 20px;
   font-weight: 100;
-  padding: 11px;
+  padding: 10px;
   text-decoration: none;
   display: block;
   cursor: pointer;
